Have solved the issue of overflow

--- a/css/FAQs.css
+++ b/css/FAQs.css
@@ -23,7 +23,7 @@ body{
     justify-content: space-between;
     margin: 10px;
     overflow-x: hidden;
-    /* border: 2px solid green; */
+  
     
 }
 
@@ -46,22 +46,24 @@ h1{
     border-radius: 15px;
     padding: 4px;
 }
-
+/* 
 .image{
    
     display: flex;
     align-items: center;
     justify-content: center;
     height: auto;
-}
+    border: 2px solid green;
+} */
 
-img{
-    width:100%;
+/* img{
+    width:100%; 
     height: 80px;
     border-radius: 10px;
-    margin: 2px;
+    margin: 2px; 
+    border: 2px solid red;
     
-}
+} */
 
 h6{
      color:var( --color-white);
@@ -113,13 +115,14 @@ h6{
  
 }
 
-#pic{
+/* #pic{
         width:100%;
         height:200px;
         border-radius: 10px;
         margin: 2px;
+        border: 2px solid gold;
        
-    }
+    } */
 
     
 .btn{
@@ -228,11 +231,12 @@ footer{
      }
 
    
-    img{
-        width:100%;
-        height: 80px;
-        border-radius: 10px;
-    }
+    /* img{
+        width:100%; 
+         height: 80px;
+        border-radius: 10px; 
+        border: 2px solid blue;
+    } */
 
     .secondparent{
         display: flex;
